--- a/geekshop/mainapp/templates/mainapp/products.html
+++ b/geekshop/mainapp/templates/mainapp/products.html
@@ -1,52 +1,11 @@
+{% extends 'mainapp/base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-
-
-<head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>{{ title|title }}</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
+    {% block css %}
     <link href="{% static 'css/products.css' %}" rel="stylesheet">
+    {% endblock %}
 
-</head>
-
-<body>
-
-<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-        <a class="navbar-brand" href="index.html">GeekShop</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="products.html">Каталог</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-shopping-bag"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="auth/login.html">Войти <i class="fas fa-sign-in-alt"></i></a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
+{% block content %}
 <!-- Page Content -->
 <div class="container">
 
@@ -58,7 +17,7 @@
             <div class="list-group">
 
                 {% for category_item in categories %}
-                    <a href="#" class="list-group-item">{{ category_item|title }}</a>
+                    <a href="#" class="list-group-item">{{ category_item.name|title }}</a>
                 {% endfor %}
             </div>
 
@@ -138,7 +97,9 @@
 
 </div>
 <!-- /.container -->
+{% endblock %}
 
+{% block footer %}
 <!-- Footer -->
 <footer class="py-5 bg-dark">
     <div class="container">
@@ -146,14 +107,5 @@
     </div>
     <!-- /.container -->
 </footer>
+{% endblock %}
 
-<!-- Bootstrap core JavaScript -->
-<script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-<script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-
-<!-- FontAwesome script -->
-<script src="{% static 'vendor/fontawesome/fontawesome-icons.js' %}" crossorigin="anonymous"></script>
-
-</body>
-
-</html>
