--- a/geekshop/mainapp/templates/mainapp/products.html
+++ b/geekshop/mainapp/templates/mainapp/products.html
@@ -103,7 +103,7 @@
 <!-- Footer -->
 <footer class="py-5 bg-dark">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; GeekShop {{ date|date:"Y" }}</p>
+        <p class="m-0 text-center text-white">Copyright &copy; GeekShop {% now "Y" %}</p>
     </div>
     <!-- /.container -->
 </footer>
