--- a/geekshop/authapp/templates/authapp/profile.html
+++ b/geekshop/authapp/templates/authapp/profile.html
@@ -64,7 +64,9 @@
                     </div>
                 </form>
             </div>
-            {% include 'basket/basket.html' %}
+            <div class="col-lg-5">
+                {% include 'basket/basket.html' %}
+            </div>
         </div>
     </div>
 {% endblock %}
