lesson_07 create admin panel users+categories CRUD + is_active

--- a/geekshop/adminapp/templates/adminapp/admin-categories-update-delete.html
+++ b/geekshop/adminapp/templates/adminapp/admin-categories-update-delete.html
@@ -28,36 +28,28 @@
                 </div>
             </form>
 
-            <form action="{% url 'adminapp:admin_category_delete' category_select.id %}">
-                {% csrf_token %}
-                <div class="row">
-                    <div class="col-lg-12" style="margin-top: 33px;">
-                        <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+
+
+            {% if not category_select.is_active %}
+                <form action="{% url 'adminapp:admin_category_activate' category_select.id %}">
+                    {% csrf_token %}
+                    <div class="row">
+                        <div class="col-lg-12" style="margin-top: 33px;">
+                            <input class="btn btn-success btn-block" type="submit" value="Восстановить">
+                        </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            {% else %}
+                <form action="{% url 'adminapp:admin_category_delete' category_select.id %}">
+                    {% csrf_token %}
+                    <div class="row">
+                        <div class="col-lg-12" style="margin-top: 33px;">
+                            <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                        </div>
+                    </div>
+                </form>
+            {% endif %}
 
-
-            {#                        {% if not user_select.is_active %}#}
-            {#                            <form action="{% url 'adminapp:admin_user_activate' user_select.id %}">#}
-            {#                                {% csrf_token %}#}
-            {#                                <div class="row">#}
-            {#                                    <div class="col-lg-12" style="margin-top: 33px;">#}
-            {#                                        <input class="btn btn-success btn-block" type="submit" value="Восстановить">#}
-            {#                                    </div>#}
-            {#                                </div>#}
-            {#                            </form>#}
-            {#                        {% else %}#}
-            {#                            <form action="{% url 'adminapp:admin_user_delete' user_select.id %}">#}
-            {#                                {% csrf_token %}#}
-            {#                                <div class="row">#}
-            {#                                    <div class="col-lg-12" style="margin-top: 33px;">#}
-            {#                                        <input class="btn btn-danger btn-block" type="submit" value="Удалить">#}
-            {#                                    </div>#}
-            {#                                </div>#}
-            {#                            </form>#}
-            {#                        {% endif %}#}
-            {##}
 
         </div>
     </div>
