--- a/geekshop/adminapp/templates/adminapp/admin-categories-read.html
+++ b/geekshop/adminapp/templates/adminapp/admin-categories-read.html
@@ -31,7 +31,7 @@
                                        style="color: dodgerblue">{{ category.name }}</a></td>
                                 <td>{{ category.description }}</td>
                                 <td class="text-center">
-                                    {% if user.is_active %}
+                                    {% if category.is_active %}
                                         <i class="fas fa-check-circle" style="color:green"></i>
                                     {% else %}
                                         <i class="fas fa-times-circle" style="color:red"></i>
