--- a/geekshop/mainapp/templates/mainapp/products.html
+++ b/geekshop/mainapp/templates/mainapp/products.html
@@ -17,7 +17,8 @@
                 <div class="list-group">
 
                     {% for category_item in categories %}
-                        <a href="#" class="list-group-item">{{ category_item.name|title }}</a>
+                        <a href="{% url 'mainapp:category' category_item.id %}"
+                           class="list-group-item">{{ category_item.name|title }}</a>
                     {% endfor %}
                 </div>
 
@@ -56,45 +57,24 @@
                     </a>
                 </div>
 
-                <div class="row">
-                    {% for product in products %}
-                        <div class="col-lg-4 col-md-6 mb-4">
-                            <div class="card h-100">
-                                <a href="#">
-                                    <img class="card-img-top"
-                                         src="{{ product.image.url }}"
-                                         alt="">
-                                </a>
-                                <div class="card-body">
-                                    <h4 class="card-title">
-                                        <a href="#">{{ product.name }}</a>
-                                    </h4>
-                                    <h5>{{ product.price }} руб.</h5>
-                                    <p class="card-text">{{ product.description }}</p>
-                                </div>
-                                <div class="card-footer text-center">
-{#                                    <form action="{% url 'basket:basket_add' product.id %}" method="post">#}
-{#                                        {% csrf_token %}#}
-{#                                        <button type="button" class="btn btn-outline-success">Отправить в корзину#}
-{#                                        </button>#}
-{#                                    </form>#}
-                                    <a href="{% url 'basket:basket_add' product.id %}" class="btn btn-outline-success">Отправить в корзину</a>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
+                {% include 'mainapp/includes/card.html' %}
 
                 <nav aria-label="Page navigation example">
                     <ul class="pagination justify-content-center">
-                        <li class="page-item disabled">
-                            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+                        <li class="page-item {% if not products.has_previous %} disabled {% endif %}">
+                            <a class="page-link"
+                               href="{% if products.has_previous %} {% url 'mainapp:page' products.previous_page_number %} {% endif %}"
+                               tabindex="-1" aria-disabled="true">Previous</a>
                         </li>
-                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#">Next</a>
+
+                        {% for page in products.paginator.page_range %}
+                            <li class="page-item"><a class="page-link" href="{% url 'mainapp:page' page %}">{{ page }}</a></li>
+                        {% endfor %}
+
+                        <li class="page-item {% if not products.has_next %} disabled {% endif %}">
+                            <a class="page-link"
+                               href="{% if products.has_next %} {% url 'mainapp:page' products.next_page_number %} {% endif %}"
+                               tabindex="-1" aria-disabled="true">Next</a>
                         </li>
                     </ul>
                 </nav>
