--- a/geekshop/adminapp/templates/adminapp/admin-categories-update-delete.html
+++ b/geekshop/adminapp/templates/adminapp/admin-categories-update-delete.html
@@ -1,9 +1,9 @@
 {% extends 'adminapp/base.html' %}
 {% block content %}
     <div class="container-fluid">
-        <h1 class="mt-4">Редактирование категории | {{ category_select.name }}</h1>
+        <h1 class="mt-4">Редактирование категории | {{ productcategories.name }}</h1>
         <div class="card-body">
-            <form action="{% url 'adminapp:admin_category_update' category_select.id %}" method="post">
+            <form action="{% url 'adminapp:admin_category_update' productcategories.id %}" method="post">
                 {% csrf_token %}
                 <div class="form-row">
                     <div class="col-lg-5">
@@ -30,8 +30,9 @@
 
 
 
-            {% if not category_select.is_active %}
-                <form action="{% url 'adminapp:admin_category_activate' category_select.id %}">
+            {% if not productcategories.is_active %}
+                <form action="{% url 'adminapp:admin_category_activate_deactivate' productcategories.id %}"
+                      method="post">
                     {% csrf_token %}
                     <div class="row">
                         <div class="col-lg-12" style="margin-top: 33px;">
@@ -40,15 +41,24 @@
                     </div>
                 </form>
             {% else %}
-                <form action="{% url 'adminapp:admin_category_delete' category_select.id %}">
+                <form action="{% url 'adminapp:admin_category_activate_deactivate' productcategories.id %}"
+                      method="post">
                     {% csrf_token %}
                     <div class="row">
                         <div class="col-lg-12" style="margin-top: 33px;">
-                            <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                            <input class="btn btn-warning btn-block" type="submit" value="Деактивировать">
                         </div>
                     </div>
                 </form>
             {% endif %}
+            <form action="{% url 'adminapp:admin_category_delete' productcategories.id %}" method="post">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col-lg-12" style="margin-top: 33px;">
+                        <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                    </div>
+                </div>
+            </form>
 
 
         </div>
