--- a/geekshop/adminapp/templates/adminapp/admin-products-update-delete.html
+++ b/geekshop/adminapp/templates/adminapp/admin-products-update-delete.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block content %}
     <div class="container-fluid">
-        <h1 class="mt-4">Редактирование продукта | {{ product_select.name }}</h1>
+        <h1 class="mt-4">Редактирование продукта | {{ product.name }}</h1>
         <div class="card-body">
-            <form action="{% url 'adminapp:admin_product_update' product_select.id %}" method="post"
+            <form action="{% url 'adminapp:admin_product_update' product.id %}" method="post"
                   enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="form-row">
@@ -41,7 +41,7 @@
                     </div>
                     <div class="col-md-6 text-center">
                         <img width="300" height="300"
-                             src="{% if product_select.image %} {{ product_select.image.url }} {% else %} {% static 'vendor/img/users/default_avatar.jpg' %} {% endif %}"
+                             src="{% if product.image %} {{ product.image.url }} {% else %} {% static 'vendor/img/users/default_avatar.jpg' %} {% endif %}"
                              class="img-thumbnail">
                     </div>
                 </div>
@@ -52,8 +52,8 @@
                 </div>
             </form>
 
-            {% if not product_select.is_active %}
-                <form action="{% url 'adminapp:admin_product_activate' product_select.id %}">
+            {% if not product.is_active %}
+                <form action="{% url 'adminapp:admin_product_activate_deactivate' product.id %}" method="post">
                     {% csrf_token %}
                     <div class="row">
                         <div class="col-lg-12" style="margin-top: 33px;">
@@ -62,15 +62,23 @@
                     </div>
                 </form>
             {% else %}
-                <form action="{% url 'adminapp:admin_product_delete' product_select.id %}">
+                <form action="{% url 'adminapp:admin_product_activate_deactivate' product.id %}" method="post">
                     {% csrf_token %}
                     <div class="row">
                         <div class="col-lg-12" style="margin-top: 33px;">
-                            <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                            <input class="btn btn-warning btn-block" type="submit" value="Деактивировать">
                         </div>
                     </div>
                 </form>
             {% endif %}
+            <form action="{% url 'adminapp:admin_product_delete' product.id %}" method="post">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col-lg-12" style="margin-top: 33px;">
+                        <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 {% endblock %}
