--- a/geekshop/adminapp/templates/adminapp/admin-users-update-delete.html
+++ b/geekshop/adminapp/templates/adminapp/admin-users-update-delete.html
@@ -1,9 +1,9 @@
 {% extends 'adminapp/base.html' %}
 {% block content %}
     <div class="container-fluid">
-        <h1 class="mt-4">Редактирование пользователя | {{ user_select.username }}</h1>
+        <h1 class="mt-4">Редактирование пользователя | {{ user.username }}</h1>
         <div class="card-body">
-            <form action="{% url 'adminapp:admin_user_update' user_select.id %}" method="post"
+            <form action="{% url 'adminapp:admin_user_update' user.id %}" method="post"
                   enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="form-row">
@@ -53,8 +53,8 @@
                 </div>
             </form>
 
-            {% if not user_select.is_active %}
-                <form action="{% url 'adminapp:admin_user_activate' user_select.id %}">
+            {% if not user.is_active %}
+                <form action="{% url 'adminapp:admin_user_activate_deactivate' user.id %}" method="post">
                     {% csrf_token %}
                     <div class="row">
                         <div class="col-lg-12" style="margin-top: 33px;">
@@ -63,15 +63,23 @@
                     </div>
                 </form>
             {% else %}
-                <form action="{% url 'adminapp:admin_user_delete' user_select.id %}">
+                <form action="{% url 'adminapp:admin_user_activate_deactivate' user.id %}" method="post">
                     {% csrf_token %}
                     <div class="row">
                         <div class="col-lg-12" style="margin-top: 33px;">
-                            <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                            <input class="btn btn-warning btn-block" type="submit" value="Деактивировать">
                         </div>
                     </div>
                 </form>
             {% endif %}
+            <form action="{% url 'adminapp:admin_user_delete' user.id %}" method="post">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col-lg-12" style="margin-top: 33px;">
+                        <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                    </div>
+                </div>
+            </form>
 
 
         </div>
