--- a/geekshop/mainapp/templates/mainapp/includes/card.html
+++ b/geekshop/mainapp/templates/mainapp/includes/card.html
@@ -1,10 +1,11 @@
+{% load static %}
 <div class="row">
     {% for product in products %}
         <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
                 <a href="#">
                     <img class="card-img-top"
-                         src="{{ product.image.url }}"
+                         src="{% if product.image %} {{ product.image.url }} {% else %} {% static 'vendor/img/users/default_avatar.jpg' %} {% endif %}"
                          alt="">
                 </a>
                 <div class="card-body">
