--- a/geekshop/mainapp/templates/mainapp/products.html
+++ b/geekshop/mainapp/templates/mainapp/products.html
@@ -15,7 +15,7 @@
 
                 <h1 class="my-4">GeekShop</h1>
                 <div class="list-group">
-
+                <a href="{% url 'mainapp:products' %}" class="list-group-item">Все товары</a>
                     {% for category_item in categories %}
                         <a href="{% url 'mainapp:category' category_item.id %}"
                            class="list-group-item">{{ category_item.name|title }}</a>
