--- a/geekshop/authapp/templates/authapp/login.html
+++ b/geekshop/authapp/templates/authapp/login.html
@@ -42,6 +42,10 @@
             </div>
             <div class="card-footer text-center">
                 <div class="small"><a href="{% url 'authapp:register' %}">Нужен аккаунт? Зарегистрируйся!</a></div>
+                <div class="list-group-horizontal card-footer text-center small">
+                    <a href="{% url 'social:begin' 'vk-oauth2' %}?next=/">
+                        <i class="fa fa-vk" aria-hidden="true"></i></a>
+                </div>
             </div>
         </div>
     </div>
