--- a/geekshop/authapp/templates/authapp/profile.html
+++ b/geekshop/authapp/templates/authapp/profile.html
@@ -57,6 +57,20 @@
                         </div>
 
                     </div>
+
+                    <div class="form-row">
+                        <div class="col-lg-6">
+                            <label class="small mb-1" for="{{ profile.gender.id_for_label }}">Пол</label>
+                            {{ profile.gender }}
+                        </div>
+                        <div class="col-lg-6">
+                            <label class="small mb-1" for="{{ profile.about.id_for_label }}">О нас</label>
+                            {{ profile.about }}
+                        </div>
+
+
+                    </div>
+
                     <div class="form-row">
                         <div class="col-lg-12" style="margin-top: 33px;">
                             <input class="btn btn-info btn-block" type="submit" value="Сохранить">
