Lesson_02_03 create views

--- a/geekshop/authapp/templates/authapp/profile.html
+++ b/geekshop/authapp/templates/authapp/profile.html
@@ -60,8 +60,16 @@
 
                     <div class="form-row">
                         <div class="col-lg-6">
-                            <label class="small mb-1" for="{{ profile.gender.id_for_label }}">Пол</label>
-                            {{ profile.gender }}
+                            <div class="form-row">
+                                <div class="col-lg-6">
+                                    <label class="small mb-1" for="{{ profile.gender.id_for_label }}">Пол</label>
+                                    {{ profile.gender }}
+                                </div>
+                                <div class="col-lg-6">
+                                    <label class="small mb-1" for="{{ profile.langs.id_for_label }}">Язык</label>
+                                    {{ profile.langs }}
+                                </div>
+                            </div>
                         </div>
                         <div class="col-lg-6">
                             <label class="small mb-1" for="{{ profile.about.id_for_label }}">О нас</label>
